<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_username"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/purple_200"
                android:text="@string/login"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lilProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>