<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/logout"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/list_of_rooms_you_already_chat"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtCreateRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:padding="5dp"
                android:text="@string/create_room"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />


        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeToRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvListOfRoom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lilProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
</RelativeLayout>